--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,10 @@
 [tox]
-envlist = python3.7, python3.8, python3.9
+envlist = py38, py39
 
 [gh-actions]
 python = 
-    3.7: python3.7
-    3.8: python3.8
-    3.9: python3.9
+    3.8: py38
+    3.9: py39
 
 [testenv]
 deps = -rrequirements_dev.txt
